# homepage

./: .gitignore  .gitmodules  .postcssrc.js  Cargo.toml  _config.yml  package.json  shell.nix
.github/: dependabot.yml
.github/workflows/: cd.yml  lints.yml
docs/: gemini-over-quic.gmi
homepage/: Cargo.toml
homepage/src/: gemini.rs  http.rs  main.rs  ssl.rs
proto/gemini/: Cargo.toml
proto/gemini/src/: lib.rs  router.rs
proto/http/: Cargo.toml
proto/http/src/: lib.rs  router.rs
proto/stream/: Cargo.toml
proto/stream/src/: lib.rs  quic.rs  tcp.rs  tls.rs
router/: Cargo.toml
router/src/: lib.rs
router/src/routes/: mod.rs
scripts/: css.js  image.js  markdown.js  pokemon.js
source/: home.ejs  index.ejs  index.md  robots.txt
source/_drafts/: Pokemon-Gen-1-Living-Pokedex-Journey-Cascade-Badge.md  Sims-2-Modded-Legacy-Challenge-Part-1-1.md  Sims-2-Scripted-Events.md
source/_drafts/Sims-2-Modded-Legacy-Challenge-Part-1-1/: badmascot-unsuccessful.jxl  cafeteria-fire.jxl  charlotte_cast.jxl  dual-wielding-cooking.jxl  eureka.jxl  harryfreeman.jxl  mitchelldrake.jxl  movein_journalism.jxl  theres-a-couch.jxl
source/_posts/: CSS-Tip-Hamburger-Menus-without-javascript.md  Managing-Passwords-without-storing-them.md  Pokemon-Gen-1-Living-Pokedex-Journey-Boulder-Badge.md  Pokemon-Gen-1-Living-Pokedex-Journey-Introduction.md  Setting-up-Final-Fantasy-14-Online-on-NixOS.md
themes/attic/: _config.yml
themes/attic/languages/: en.yml
themes/attic/layout/: index.ejs  layout.ejs  page.ejs
themes/attic/layout/_partial/: archive-post.ejs  archive.ejs  article.ejs
themes/attic/layout/_partial/post/: category.ejs  nav.ejs  title.ejs
themes/attic/source/css/: _prism-dark.scss  _prism.scss  _theme.scss  style.scss
themes/attic/source/css/themes/: _black.scss  _light.scss  _schemes.scss  _styles.scss  _sunset.scss  _theme-colors.scss  _white.scss
themes/attic/source/js/: theme-picker.js
