[package]
name = "proto_gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
tokio = {version = "1.12.0", features = ["io-util"] }
anyhow = "1.0.44"
async-trait = "0.1.51"
tracing = "0.1.29"
tracing-futures = "0.2.5"
sentry-anyhow = "0.23.0"
proto_stream = {path = "../stream"}