[package]
name = "proto_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.13", features = ["server", "http1", "http2"]}
anyhow = "1.0.44"
tokio = {version = "1.12.0", features = ["io-util"] }
async-trait = "0.1.51"
tracing = "0.1.29"
tracing-futures = "0.2.5"
proto_stream = {path = "../stream"}
sentry-anyhow = "0.23.0"
router = {path = "../../router"}
url = "2.2.2"
pin-project = "1.0.8"