[package]
name = "proto_stream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
tracing = "0.1.29"
tokio = { version = "1.12.0", features = ["rt", "io-util", "net", "sync"] }
sentry-anyhow = "0.23.0"
tokio-rustls = "0.22.0"
quinn = "0.7.2"
futures = "0.3.17"
pin-project = "1.0.8"
